img-responsive => img-fluid

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -410,7 +410,7 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Responsive images</h3>
 <div>
-  <img data-src="holder.js/100px250" class="img-responsive" alt="Generic responsive image" />
+  <img data-src="holder.js/100px250" class="img-fluid" alt="Generic responsive image" />
 </div>
 
 <h3>Image shapes</h3>
@@ -420,17 +420,17 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Figures</h3>
 <figure class="figure">
-  <img data-src="holder.js/300x200" class="figure-img img-responsive" alt="A generic square placeholder image in a figure.">
+  <img data-src="holder.js/300x200" class="figure-img img-fluid" alt="A generic square placeholder image in a figure.">
   <figcaption class="figure-caption">A caption for the above image.</figcaption>
 </figure>
 
 <figure class="figure">
-  <img data-src="holder.js/300x200" class="figure-img img-responsive radius-a" alt="A square placeholder image with rounded corners in a figure.">
+  <img data-src="holder.js/300x200" class="figure-img img-fluid radius-a" alt="A square placeholder image with rounded corners in a figure.">
   <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
 </figure>
 
 <figure class="figure">
-  <img data-src="holder.js/300x200" class="figure-img img-responsive img-thumbnail" alt="A square placeholder image with rounded corners in a figure.">
+  <img data-src="holder.js/300x200" class="figure-img img-fluid img-thumbnail" alt="A square placeholder image with rounded corners in a figure.">
   <figcaption class="figure-caption">A caption for the above image.</figcaption>
 </figure>
 
@@ -3318,7 +3318,7 @@ Anchor variants:<br />
 <h3>Card</h3>
 <div class="card-sample">
     <div class="card">
-      <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -3330,7 +3330,7 @@ Anchor variants:<br />
 <h3>Card - content types</h3>
 <div class="card-sample">
     <div class="card">
-      <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -3355,7 +3355,7 @@ Anchor variants:<br />
     </div>
 
     <div class="card">
-      <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
       <div class="card-body">
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
@@ -3493,7 +3493,7 @@ Anchor variants:<br />
 
     <h3>Card - image caps</h3>
     <div class="card">
-      <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -3506,12 +3506,12 @@ Anchor variants:<br />
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
-      <img class="card-img-bottom img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <img class="card-img-bottom img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
     </div>
 
     <h3>Card - image overlay</h3>
     <div class="card">
-      <img src="../assets/img/test.gif" class="card-img img-responsive" alt="Card image" style="width: 100%; opacity: .3;">
+      <img src="../assets/img/test.gif" class="card-img img-fluid" alt="Card image" style="width: 100%; opacity: .3;">
       <div class="card-img-overlay">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
@@ -3653,7 +3653,7 @@ Anchor variants:<br />
 <div class="card-sample">
     <div class="card-group">
       <div class="card">
-        <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -3661,7 +3661,7 @@ Anchor variants:<br />
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -3669,7 +3669,7 @@ Anchor variants:<br />
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -3682,7 +3682,7 @@ Anchor variants:<br />
 <h3>Card deck</h3>
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+    <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -3690,7 +3690,7 @@ Anchor variants:<br />
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+    <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -3698,7 +3698,7 @@ Anchor variants:<br />
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+    <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -3734,7 +3734,7 @@ Anchor variants:<br />
 
 <div class="card-columns">
   <div class="card">
-    <img class="card-img-top img-responsive" data-src="holder.js/100px150" alt="Card image cap">
+    <img class="card-img-top img-fluid" data-src="holder.js/100px150" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Card title that wraps to a new line</h4>
       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -3759,7 +3759,7 @@ Anchor variants:<br />
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top img-responsive" data-src="holder.js/100px150" alt="Card image cap">
+    <img class="card-img-top img-fluid" data-src="holder.js/100px150" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -3786,7 +3786,7 @@ Anchor variants:<br />
     </div>
   </div>
   <div class="card">
-    <img class="card-img img-responsive" data-src="holder.js/100px200" alt="Card image" />
+    <img class="card-img img-fluid" data-src="holder.js/100px200" alt="Card image" />
   </div>
   <div class="card text-right">
     <div class="card-body">
