--- a/test/visual/flexbox-cards.html
+++ b/test/visual/flexbox-cards.html
@@ -52,7 +52,7 @@ Holder.addTheme("gray", {
 
     <div class="card-deck">
         <div class="card">
-            <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+            <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -60,7 +60,7 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+            <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -68,7 +68,7 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+            <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -115,7 +115,7 @@ Holder.addTheme("gray", {
 
     <div class="card-group">
       <div class="card">
-        <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -123,7 +123,7 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -131,7 +131,7 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-responsive" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -149,7 +149,7 @@ Holder.addTheme("gray", {
     <div class="card-deck-wrapper">
       <div class="card-deck">
         <div class="card">
-          <img class="card-img-top img-responsive" data-src="holder.js/100px200/" alt="Card image cap">
+          <img class="card-img-top img-fluid" data-src="holder.js/100px200/" alt="Card image cap">
           <div class="card-body">
             <h4 class="card-title">Card title</h4>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -159,7 +159,7 @@ Holder.addTheme("gray", {
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top img-responsive" data-src="holder.js/100px200/" alt="Card image cap">
+          <img class="card-img-top img-fluid" data-src="holder.js/100px200/" alt="Card image cap">
           <div class="card-body">
             <h4 class="card-title">Card title</h4>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -169,7 +169,7 @@ Holder.addTheme("gray", {
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top img-responsive" data-src="holder.js/100px200/" alt="Card image cap">
+          <img class="card-img-top img-fluid" data-src="holder.js/100px200/" alt="Card image cap">
           <div class="card-body">
             <h4 class="card-title">Card title</h4>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -185,7 +185,7 @@ Holder.addTheme("gray", {
 
     <div class="card-group">
       <div class="card">
-        <img class="card-img-top img-responsive" data-src="holder.js/100px180/" alt="Card image cap">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -195,7 +195,7 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-responsive" data-src="holder.js/100px180/" alt="Card image cap">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -205,7 +205,7 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-responsive" data-src="holder.js/100px180/" alt="Card image cap">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -248,28 +248,28 @@ Holder.addTheme("gray", {
 
     <div class="card-deck card-deck-col">
         <div class="card">
-            <img class="card-img-top img-responsive" data-src="holder.js/100px150/" alt="Card image cap">
+            <img class="card-img-top img-fluid" data-src="holder.js/100px150/" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a card with some amount of text. This is a card with some amount of text.</p>
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top img-responsive" data-src="holder.js/100px150/" alt="Card image cap">
+            <img class="card-img-top img-fluid" data-src="holder.js/100px150/" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a card with some amount of text. This is a card with some amount of text.</p>
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top img-responsive" data-src="holder.js/100px150/" alt="Card image cap">
+            <img class="card-img-top img-fluid" data-src="holder.js/100px150/" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a card with some amount of text. This is a card with some amount of text.</p>
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top img-responsive" data-src="holder.js/100px150/" alt="Card image cap">
+            <img class="card-img-top img-fluid" data-src="holder.js/100px150/" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a card with some amount of text. This is a card with some amount of text.</p>
