--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -742,7 +742,7 @@ $(window).ready(function() {
                 <h3 class="popover-header">Popover selector</h3>
                 <div class="popover-body">
                     <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-                    <img src="" data-cfw="lazy" data-cfw-lazy-src="../assets/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-responsive" />
+                    <img src="" data-cfw="lazy" data-cfw-lazy-src="../assets/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-fluid" />
                 </div>
                 <div class="popover-arrow"></div>
             </div>
@@ -752,7 +752,7 @@ $(window).ready(function() {
                 <h3 class="popover-header">Popover selector</h3>
                 <div class="popover-body">
                     <p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-                    <img src="" data-cfw="lazy" data-cfw-lazy-src="../assets/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-responsive" />
+                    <img src="" data-cfw="lazy" data-cfw-lazy-src="../assets/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-fluid" />
                 </div>
                 <div class="popover-arrow"></div>
             </div>
@@ -1514,13 +1514,13 @@ $(window).ready(function() {
                     \/ Scroll down \/
                 </p>
                 <p>
-                <img src="" data-cfw="lazy" data-cfw-lazy-container="#lazytest" data-cfw-lazy-effect="fadeIn" data-cfw-lazy-speed=1000 data-cfw-lazy-src="../assets/img/test.gif" alt="test pattern" class="img-responsive" width="320" height="180" />
+                <img src="" data-cfw="lazy" data-cfw-lazy-container="#lazytest" data-cfw-lazy-effect="fadeIn" data-cfw-lazy-speed=1000 data-cfw-lazy-src="../assets/img/test.gif" alt="test pattern" class="img-fluid" width="320" height="180" />
                 </p>
                 <p>
-                <img src="" data-cfw="lazy" data-cfw-lazy-container="#lazytest" data-cfw-lazy-delay=1000 data-cfw-lazy-effect="fadeIn" data-cfw-lazy-speed=1000 data-cfw-lazy-src="../assets/img/test.gif" alt="test pattern" class="img-responsive" width="320" height="180" />
+                <img src="" data-cfw="lazy" data-cfw-lazy-container="#lazytest" data-cfw-lazy-delay=1000 data-cfw-lazy-effect="fadeIn" data-cfw-lazy-speed=1000 data-cfw-lazy-src="../assets/img/test.gif" alt="test pattern" class="img-fluid" width="320" height="180" />
                 </p>
                 <p>
-                <img src="" data-cfw="lazy" data-cfw-lazy-container="#lazytest" data-cfw-lazy-delay=1000 data-cfw-lazy-src="../assets/img/test.gif" alt="test pattern" class="img-responsive" width="320" height="180" />
+                <img src="" data-cfw="lazy" data-cfw-lazy-container="#lazytest" data-cfw-lazy-delay=1000 data-cfw-lazy-src="../assets/img/test.gif" alt="test pattern" class="img-fluid" width="320" height="180" />
                 </p>
             </div>
 
@@ -1546,7 +1546,7 @@ $(window).ready(function() {
                     <div class="well" data-cfw-equalize-group="eqtest0">
                         <h3>Panel 3</h3>
                         <p>Nam porta malesuada mi, quis hendrerit purus.</p>
-                        <img src="../assets/img/test.gif" alt="test pattern" class="img-responsive" />
+                        <img src="../assets/img/test.gif" alt="test pattern" class="img-fluid" />
                     </div>
                 </div>
             </div>
@@ -1569,7 +1569,7 @@ $(window).ready(function() {
                     <div class="well">
                         <h3>Panel 3</h3>
                         <p>Nam porta malesuada mi, quis hendrerit purus.</p>
-                        <!-- <img src="../assets/img/test.gif" alt="test pattern" class="img-responsive" /> -->
+                        <!-- <img src="../assets/img/test.gif" alt="test pattern" class="img-fluid" /> -->
                     </div>
                 </div>
                 <div class="col-md-4 hidden">
