rename embed-respsonsive => embed-fluid

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1649,7 +1649,7 @@ Anchor variants:<br />
 
 <h3>Embed responsive</h3>
 <div class="video-sample">
-    <div class="embed-responsive">
+    <div class="embed-fluid">
         <video poster="../assets/video/niagara_falls.jpg" controls>
             <source src="../assets/video/niagara_falls.mp4" type="video/mp4" />
             <track src="../assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
@@ -1660,7 +1660,7 @@ Anchor variants:<br />
 
 <h3>Embed responsive - in flex element</h3>
 <div class="video-sample" style="display: flex;">
-    <div class="embed-responsive">
+    <div class="embed-fluid">
         <video poster="../assets/video/niagara_falls.jpg" controls>
             <source src="../assets/video/niagara_falls.mp4" type="video/mp4" />
             <track src="../assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
