rename table-responsive => table-scroll

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -659,143 +659,169 @@ Showing a <kbd>kdb sample</kbd>
 </tbody>
 </table>
 
-<h3>Responsive Table</h3>
-<div class="table-responsive">
-    <table class="table">
-    <thead>
-        <tr>
-          <th>#</th>
-          <th>Table Header 1</th>
-          <th>Table Header 2</th>
-          <th>Table Header 3</th>
-          <th>Table Header 4</th>
-          <th>Table Header 5</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td colspan="2">table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-        </tr>
-    </tbody>
-    </table>
-</div>
+<h3>Scrolling Table</h3>
+<table class="table table-scroll text-nowrap">
+<thead>
+    <tr>
+      <th>#</th>
+      <th>Table Header 1</th>
+      <th>Table Header 2</th>
+      <th>Table Header 3</th>
+      <th>Table Header 4</th>
+      <th>Table Header 5</th>
+      <th>Table Header 6</th>
+      <th>Table Header 7</th>
+      <th>Table Header 8</th>
+      <th>Table Header 9</th>
+    </tr>
+</thead>
+<tbody>
+    <tr>
+        <th scope="row">1</th>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+    </tr>
+    <tr>
+        <th scope="row">2</th>
+        <td colspan="2">table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+    </tr>
+    <tr>
+        <th scope="row">3</th>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+    </tr>
+</tbody>
+</table>
 
-<h3>Bordered responsive table</h3>
-<div class="table-responsive">
-    <table class="table table-bordered">
-    <thead>
-        <tr>
-          <th>#</th>
-          <th>Table Header 1</th>
-          <th>Table Header 2</th>
-          <th>Table Header 3</th>
-          <th>Table Header 4</th>
-          <th>Table Header 5</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td colspan="2">table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-            <td>table cell</td>
-        </tr>
-    </tbody>
-    </table>
-</div>
+<h3>Bordered scrolling table</h3>
+<table class="table table-scroll table-bordered text-nowrap">
+<thead>
+    <tr>
+      <th>#</th>
+      <th>Table Header 1</th>
+      <th>Table Header 2</th>
+      <th>Table Header 3</th>
+      <th>Table Header 4</th>
+      <th>Table Header 5</th>
+      <th>Table Header 6</th>
+      <th>Table Header 7</th>
+      <th>Table Header 8</th>
+      <th>Table Header 9</th>
+    </tr>
+</thead>
+<tbody>
+    <tr>
+        <th scope="row">1</th>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+    </tr>
+    <tr>
+        <th scope="row">2</th>
+        <td colspan="2">table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+    </tr>
+    <tr>
+        <th scope="row">3</th>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+    </tr>
+</tbody>
+</table>
 
 <h3>Contextual table</h3>
-<div class="table-responsive">
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>Class</th>
-        <th>Description</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="table-primary">
-        <th scope="row">
-          <code>.table-primary</code>
-        </th>
-        <td>Applies the primary context color to a particular row or cell</td>
-      </tr>
-      <tr class="table-secondary">
-        <th scope="row">
-          <code>.table-secondary</code>
-        </th>
-        <td>Applies the secondary context color to a particular row or cell</td>
-      </tr>
-      <tr class="table-active">
-        <th scope="row">
-          <code>.table-active</code>
-        </th>
-        <td>Applies the hover color to a particular row or cell</td>
-      </tr>
-      <tr class="table-success">
-        <th scope="row">
-          <code>.table-success</code>
-        </th>
-        <td>Indicates a successful or positive action</td>
-      </tr>
-      <tr class="table-info">
-        <th scope="row">
-          <code>.table-info</code>
-        </th>
-        <td>Indicates a neutral informative change or action</td>
-      </tr>
-      <tr class="table-warning">
-        <th scope="row">
-          <code>.table-warning</code>
-        </th>
-        <td>Indicates a warning that might need attention</td>
-      </tr>
-      <tr class="table-danger">
-        <th scope="row">
-          <code>.table-danger</code>
-        </th>
-        <td>Indicates a dangerous or potentially negative action</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>Class</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="table-primary">
+      <th scope="row">
+        <code>.table-primary</code>
+      </th>
+      <td>Applies the primary context color to a particular row or cell</td>
+    </tr>
+    <tr class="table-secondary">
+      <th scope="row">
+        <code>.table-secondary</code>
+      </th>
+      <td>Applies the secondary context color to a particular row or cell</td>
+    </tr>
+    <tr class="table-active">
+      <th scope="row">
+        <code>.table-active</code>
+      </th>
+      <td>Applies the hover color to a particular row or cell</td>
+    </tr>
+    <tr class="table-success">
+      <th scope="row">
+        <code>.table-success</code>
+      </th>
+      <td>Indicates a successful or positive action</td>
+    </tr>
+    <tr class="table-info">
+      <th scope="row">
+        <code>.table-info</code>
+      </th>
+      <td>Indicates a neutral informative change or action</td>
+    </tr>
+    <tr class="table-warning">
+      <th scope="row">
+        <code>.table-warning</code>
+      </th>
+      <td>Indicates a warning that might need attention</td>
+    </tr>
+    <tr class="table-danger">
+      <th scope="row">
+        <code>.table-danger</code>
+      </th>
+      <td>Indicates a dangerous or potentially negative action</td>
+    </tr>
+  </tbody>
+</table>
 
 <h3>Collapsing Table:</h3>
 <table class="table">
