update head and meta items

--- a/test/visual/flexbox-nav.html
+++ b/test/visual/flexbox-nav.html
@@ -1,11 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en-us">
 <head>
-<title>Figuration - Flexbox Navs</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+<title>Figuration - Flexbox Navs</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
