Adjust caret & dropdown-toggle margins

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1858,7 +1858,7 @@ Anchor variants:<br />
     </ul>
   </div>
 
-  <button type="button" class="btn btn-secondary">Caret <span class="caret" aria-hidden="true"></span></button>
+  <button type="button" class="btn btn-secondary">Caret <span class="caret ml-0_25" aria-hidden="true"></span></button>
 </div>
 <br />
 
