--- a/test/visual/flexbox-button.html
+++ b/test/visual/flexbox-button.html
@@ -48,10 +48,10 @@
         <button type="button" class="btn">Button</button>
         <button type="button" class="btn">Button</button>
             <div class="btn-group" role="group">
-                <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop0">
+                <button type="button" class="btn dropdown-toggle" data-cfw="dropdown">
                 Dropdown
             </button>
-            <ul class="dropdown-menu" id="btnGroupVerticalDrop0">
+            <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
             </ul>
@@ -59,28 +59,28 @@
         <button type="button" class="btn">Button</button>
         <button type="button" class="btn">Button</button>
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop1">
+            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown">
                 Dropdown
             </button>
-            <ul class="dropdown-menu" id="btnGroupVerticalDrop1">
+            <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
             </ul>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop3">
+            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown">
                 Dropdown
             </button>
-            <ul class="dropdown-menu" id="btnGroupVerticalDrop3">
+            <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
             </ul>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupVerticalDrop4">
+            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown">
                 Dropdown
             </button>
-            <ul class="dropdown-menu" id="btnGroupVerticalDrop4">
+            <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
             </ul>
@@ -123,10 +123,10 @@
         <button type="button" class="btn">2</button>
 
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#btnGroupDrop1">
+            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown">
                 Dropdown
             </button>
-            <ul class="dropdown-menu" id="btnGroupDrop1">
+            <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
             </ul>
