--- a/test/visual/flexbox-nav.html
+++ b/test/visual/flexbox-nav.html
@@ -133,8 +133,8 @@
             <a class="nav-link active" href="#">Active</a>
         </li>
         <li class="nav-item dropdown">
-            <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropNav1">Dropdown</a>
-            <ul class="dropdown-menu" id="dropNav1">
+            <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown">Dropdown</a>
+            <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -157,8 +157,8 @@
             <a class="nav-link active" href="#">Active</a>
         </li>
         <li class="nav-item dropdown">
-            <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-toggle="#dropNav1">Dropdown</a>
-            <ul class="dropdown-menu" id="dropNav1">
+            <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown">Dropdown</a>
+            <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
